--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .header {
             text-align: center;
             margin-bottom: 2rem;
-            padding: 1rem;
+            padding: 0.5rem 1rem 0.5rem 1rem;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
