--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         /* User answer input styling */
         .user-answer-input {
             width: 100%;
-            padding: 0.75rem;
-            margin: 1rem 0;
+            padding: 0.0rem;
+            margin: 0.0rem;
             border: 1px solid #ced4da;
             border-radius: 4px;
             font-size: 1rem;
