--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
         
         /* User answer input styling */
         .user-answer-input {
-            width: 100%;
-            padding: 0.0rem;
-            margin: 0.0rem;
+            width: 90%;
+            padding: 0.75rem;
+            margin: 1rem 0;
             border: 1px solid #ced4da;
             border-radius: 4px;
             font-size: 1rem;
