--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 
         .header {
             text-align: center;
-            margin-bottom: 1rem;
+            margin-bottom: 0;
             padding: 0.5rem;
             background-color: white;
-            border-radius: 8px;
+            border-radius: 8px 8px 0 0;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .header h1 {
             color: var(--primary);
-            margin: 0.5rem 0;
-            font-size: 1.5rem;
+            margin: 0.5rem 0 0 0;
+            font-size: 1.2rem;
         }
 
         .header p {
@@ -189,7 +189,7 @@
             margin-bottom: 0.75rem;
             font-size: 1.2rem;
             overflow-y: auto;
-            max-height: 300px;
+            max-height: 100%;
         }
 
         .question {
@@ -239,12 +239,12 @@
             flex-direction: column;
             width: 90%;
             margin: 1rem auto;
-            gap: 0.75rem;
+            gap: 0.3rem;
         }
 
         .option-item {
             position: relative;
-            padding: 0.75rem;
+            padding: 0.3rem;
             border: 2px solid #ced4da;
             border-radius: 6px;
             cursor: pointer;
@@ -348,10 +348,10 @@
         .stats {
             display: flex;
             justify-content: space-around;
-            margin: 0.5rem 0;
-            padding: 0.5rem;
+            margin: 0 0 0.5rem 0;
+            padding: 0 0 0.5rem 0;
             background-color: white;
-            border-radius: 8px;
+            border-radius: 0 0 8px 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
