[Optimize] index.html for size by outsourcing the stylesheet.

--- a/index.html
+++ b/index.html
@@ -5,457 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lernkarten App</title>
-    <style>
-        :root {
-            --primary: #4a6fa5;
-            --secondary: #166088;
-            --light: #f8f9fa;
-            --dark: #343a40;
-            --success: #28a745;
-            --danger: #dc3545;
-            --warning: #ffc107;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: var(--dark);
-            background-color: #f5f7fa;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 900px;
-            margin: 1rem auto;
-            flex: 1;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 0;
-            padding: 0.5rem;
-            background-color: white;
-            border-radius: 8px 8px 0 0;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .header h1 {
-            color: var(--primary);
-            margin: 0.5rem 0 0 0;
-            font-size: 1.2rem;
-        }
-
-        .header p {
-            margin: 0.25rem 0;
-            font-size: 1.0rem;
-        }
-
-        #file-input-container {
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        #upload-label {
-            display: inline-block;
-            padding: 0.5rem 1rem;
-            background-color: var(--primary);
-            color: white;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #upload-label:hover {
-            background-color: var(--secondary);
-        }
-
-        #file-input {
-            display: none;
-        }
-
-        /* Saved Decks Styles */
-        #saved-decks {
-            margin: 1rem 0;
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        .saved-deck {
-            background-color: white;
-            padding: 0.5rem;
-            margin-bottom: 0.5rem;
-            border-radius: 4px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-
-        .deck-title {
-            font-weight: 500;
-            color: var(--primary);
-            cursor: pointer;
-        }
-
-        .delete-deck {
-            color: var(--danger);
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 1.1rem;
-            padding: 0.25rem 0.5rem;
-        }
-
-        /* Flip Card Animation Styles */
-        .card-container {
-            perspective: 1000px;
-            margin-bottom: 1rem;
-            min-height: 350px;
-            height: calc(100vh - 280px);
-            /* Fill available space */
-        }
-
-        .card {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            min-height: 350px;
-            text-align: center;
-            transition: transform 0.8s;
-            transform-style: preserve-3d;
-            text-align: center;
-            transition: transform 0.8s;
-            transform-style: preserve-3d;
-        }
-
-        .card.flipped {
-            transform: rotateY(180deg);
-        }
-
-        .card-front,
-        .card-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 1rem;
-            box-sizing: border-box;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            top: 0;
-            left: 0;
-            transition: opacity 0.4s ease;
-        }
-
-        .card-front {
-            z-index: 2;
-            opacity: 1;
-            visibility: visible;
-            pointer-events: auto;
-        }
-
-        .card.flipped .card-front {
-            opacity: 0;
-            visibility: hidden;
-            pointer-events: none;
-        }
-
-        .card-back {
-            transform: rotateY(180deg);
-            z-index: 1;
-            opacity: 0;
-            visibility: hidden;
-            pointer-events: none;
-        }
-
-        .card.flipped .card-back {
-            opacity: 1;
-            visibility: visible;
-            pointer-events: auto;
-            z-index: 2;
-        }
-
-        .card-content {
-            flex: 1;
-            margin-bottom: 0.75rem;
-            font-size: 1.2rem;
-            overflow-y: auto;
-            max-height: 100%;
-        }
-
-        .question {
-            font-weight: bold;
-            font-size: 1.4rem;
-            color: var(--primary);
-            margin-bottom: 0.75rem;
-        }
-
-        .answer {
-            padding: 0.75rem;
-            background-color: var(--light);
-            border-left: 4px solid var(--primary);
-            margin-top: 0.5rem;
-            text-align: left;
-        }
-
-        /* User answer input styling */
-        .user-answer-input {
-            width: 90%;
-            padding: 0.75rem;
-            margin: 1rem 0;
-            border: 1px solid #ced4da;
-            border-radius: 4px;
-            font-size: 1rem;
-            transition: border-color 0.15s ease-in-out;
-        }
-
-        .user-answer-input:focus {
-            border-color: var(--primary);
-            outline: 0;
-            box-shadow: 0 0 0 0.2rem rgba(74, 111, 165, 0.25);
-        }
-
-        .user-answer-display {
-            padding: 0.75rem;
-            margin-top: 0.5rem;
-            background-color: #e9f2ff;
-            border-left: 4px solid #92b5e3;
-            text-align: left;
-            border-radius: 4px;
-        }
-
-        /* Multiple Choice Options Styling */
-        .options-container {
-            display: flex;
-            flex-direction: column;
-            width: 90%;
-            margin: 1rem auto;
-            gap: 0.3rem;
-        }
-
-        .option-item {
-            position: relative;
-            padding: 0.3rem;
-            border: 2px solid #ced4da;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            display: flex;
-            align-items: center;
-            text-align: left;
-        }
-
-        .option-item:hover {
-            border-color: var(--primary);
-            background-color: #f0f5ff;
-        }
-
-        .option-item.selected {
-            border-color: var(--primary);
-            background-color: rgba(74, 111, 165, 0.1);
-        }
-
-        .option-item.correct {
-            border-color: var(--success);
-            background-color: rgba(40, 167, 69, 0.1);
-        }
-
-        .option-item.incorrect {
-            border-color: var(--danger);
-            background-color: rgba(220, 53, 69, 0.1);
-        }
-
-        .option-checkbox {
-            margin-right: 0.75rem;
-            width: 18px;
-            height: 18px;
-        }
-
-        .selected-options-display {
-            padding: 0.75rem;
-            margin-top: 0.5rem;
-            background-color: #e9f2ff;
-            border-left: 4px solid #92b5e3;
-            text-align: left;
-            border-radius: 4px;
-        }
-
-        .controls {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            width: 100%;
-        }
-
-        .btn {
-            padding: 0.4rem 0.8rem;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: 500;
-            transition: all 0.3s;
-            flex: 1;
-            min-width: 80px;
-            font-size: 1.0rem;
-        }
-
-        .btn-primary {
-            background-color: var(--primary);
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background-color: var(--secondary);
-        }
-
-        .btn-success {
-            background-color: var(--success);
-            color: white;
-        }
-
-        .btn-success:hover {
-            background-color: #218838;
-        }
-
-        .btn-danger {
-            background-color: var(--danger);
-            color: white;
-        }
-
-        .btn-danger:hover {
-            background-color: #c82333;
-        }
-
-        .btn-secondary {
-            background-color: #6c757d;
-            color: white;
-        }
-
-        .btn-secondary:hover {
-            background-color: #5a6268;
-        }
-
-        .stats {
-            display: flex;
-            justify-content: space-around;
-            margin: 0 0 0.5rem 0;
-            padding: 0 0 0.5rem 0;
-            background-color: white;
-            border-radius: 0 0 8px 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-value {
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: var(--primary);
-        }
-
-        .stat-label {
-            font-size: 0.9rem;
-            color: #6c757d;
-        }
-
-        .progress-bar {
-            height: 6px;
-            background-color: #e9ecef;
-            border-radius: 4px;
-            margin: 0.5rem 0;
-            overflow: hidden;
-        }
-
-        .progress {
-            height: 100%;
-            background-color: var(--primary);
-            width: 0%;
-        }
-
-        .feedback {
-            font-size: 1.0rem;
-            text-align: center;
-            margin-top: 1rem;
-            color: #6c757d;
-        }
-
-        .error-message {
-            color: var(--danger);
-            text-align: center;
-            margin: 1rem 0;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        #sample-json {
-            margin-top: 1rem;
-            padding: 0.75rem;
-            background-color: #f8f9fa;
-            border-radius: 4px;
-            border: 1px solid #dee2e6;
-            font-family: monospace;
-            white-space: pre-wrap;
-            font-size: 0.9rem;
-        }
-
-        .json-toggle {
-            margin-top: 0.5rem;
-            font-size: 0.9rem;
-            color: var(--primary);
-            cursor: pointer;
-            text-decoration: underline;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                width: 95%;
-                margin: 0.5rem auto;
-            }
-
-            .controls {
-                gap: 0.3rem;
-            }
-
-            .btn {
-                padding: 0.3rem 0.6rem;
-                font-size: 0.9rem;
-            }
-
-            .card-container {
-                min-height: 330px;
-            }
-
-            .card {
-                min-height: 330px;
-            }
-
-            .stats {
-                padding: 0.4rem 0.2rem;
-            }
-
-            .stat-value {
-                font-size: 1.1rem;
-            }
-
-            .stat-label {
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -623,40 +173,41 @@
         let selectedOptionIndices = []; // For multiple choice questions
 
         // DOM elements
-        const fileInput = document.getElementById('file-input');
-        const appContent = document.getElementById('app-content');
-        const appTitle = document.getElementById('app-title');
-        const appSubtitle = document.getElementById('app-subtitle');
-        const questionText = document.getElementById('question-text');
-        const questionBack = document.getElementById('question-back');
-        const answerText = document.getElementById('answer-text');
-        const userAnswerInput = document.getElementById('user-answer-input');
-        const userAnswerContainer = document.getElementById('user-answer-container');
-        const userAnswerDisplay = document.getElementById('user-answer-display');
-        const optionsContainer = document.getElementById('options-container');
-        const selectedOptionsContainer = document.getElementById('selected-options-container');
-        const selectedOptionsDisplay = document.getElementById('selected-options-display');
-        const mcCorrectAnswerContainer = document.getElementById('mc-correct-answer-container');
-        const mcCorrectAnswerText = document.getElementById('mc-correct-answer-text');
-        const standardAnswerContainer = document.getElementById('standard-answer-container');
-        const showAnswerBtn = document.getElementById('show-answer');
-        const checkMcAnswerBtn = document.getElementById('check-mc-answer');
-        const markCorrectBtn = document.getElementById('mark-correct');
-        const markIncorrectBtn = document.getElementById('mark-incorrect');
-        const nextCardBtn = document.getElementById('next-card');
-        const progressBar = document.getElementById('progress-bar');
-        const cardsRemainingElement = document.getElementById('cards-remaining');
-        const cardsCompletedElement = document.getElementById('cards-completed');
-        const correctCountElement = document.getElementById('correct-count');
-        const incorrectCountElement = document.getElementById('incorrect-count');
-        const feedbackElement = document.getElementById('feedback');
-        const finalScoreElement = document.getElementById('final-score');
-        const restartBtn = document.getElementById('restart-btn');
-        const uploadNewBtn = document.getElementById('upload-new-btn');
-        const errorMessageElement = document.getElementById('error-message');
-        const flipCard = document.getElementById('flip-card');
-        const cardContainer = document.getElementById('card-container');
-        const savedDecksContainer = document.getElementById('saved-decks');
+        const dgel = document.getElementById;
+        const fileInput = dgel('file-input');
+        const appContent = dgel('app-content');
+        const appTitle = dgel('app-title');
+        const appSubtitle = dgel('app-subtitle');
+        const questionText = dgel('question-text');
+        const questionBack = dgel('question-back');
+        const answerText = dgel('answer-text');
+        const userAnswerInput = dgel('user-answer-input');
+        const userAnswerContainer = dgel('user-answer-container');
+        const userAnswerDisplay = dgel('user-answer-display');
+        const optionsContainer = dgel('options-container');
+        const selectedOptionsContainer = dgel('selected-options-container');
+        const selectedOptionsDisplay = dgel('selected-options-display');
+        const mcCorrectAnswerContainer = dgel('mc-correct-answer-container');
+        const mcCorrectAnswerText = dgel('mc-correct-answer-text');
+        const standardAnswerContainer = dgel('standard-answer-container');
+        const showAnswerBtn = dgel('show-answer');
+        const checkMcAnswerBtn = dgel('check-mc-answer');
+        const markCorrectBtn = dgel('mark-correct');
+        const markIncorrectBtn = dgel('mark-incorrect');
+        const nextCardBtn = dgel('next-card');
+        const progressBar = dgel('progress-bar');
+        const cardsRemainingElement = dgel('cards-remaining');
+        const cardsCompletedElement = dgel('cards-completed');
+        const correctCountElement = dgel('correct-count');
+        const incorrectCountElement = dgel('incorrect-count');
+        const feedbackElement = dgel('feedback');
+        const finalScoreElement = dgel('final-score');
+        const restartBtn = dgel('restart-btn');
+        const uploadNewBtn = dgel('upload-new-btn');
+        const errorMessageElement = dgel('error-message');
+        const flipCard = dgel('flip-card');
+        const cardContainer = dgel('card-container');
+        const savedDecksContainer = dgel('saved-decks');
 
         // Event listeners
         fileInput.addEventListener('change', handleFileUpload);
