[Revert] optimization of function name spelling minimization.

--- a/index.html
+++ b/index.html
@@ -173,41 +173,40 @@
         let selectedOptionIndices = []; // For multiple choice questions
 
         // DOM elements
-        const dgel = document.getElementById;
-        const fileInput = dgel('file-input');
-        const appContent = dgel('app-content');
-        const appTitle = dgel('app-title');
-        const appSubtitle = dgel('app-subtitle');
-        const questionText = dgel('question-text');
-        const questionBack = dgel('question-back');
-        const answerText = dgel('answer-text');
-        const userAnswerInput = dgel('user-answer-input');
-        const userAnswerContainer = dgel('user-answer-container');
-        const userAnswerDisplay = dgel('user-answer-display');
-        const optionsContainer = dgel('options-container');
-        const selectedOptionsContainer = dgel('selected-options-container');
-        const selectedOptionsDisplay = dgel('selected-options-display');
-        const mcCorrectAnswerContainer = dgel('mc-correct-answer-container');
-        const mcCorrectAnswerText = dgel('mc-correct-answer-text');
-        const standardAnswerContainer = dgel('standard-answer-container');
-        const showAnswerBtn = dgel('show-answer');
-        const checkMcAnswerBtn = dgel('check-mc-answer');
-        const markCorrectBtn = dgel('mark-correct');
-        const markIncorrectBtn = dgel('mark-incorrect');
-        const nextCardBtn = dgel('next-card');
-        const progressBar = dgel('progress-bar');
-        const cardsRemainingElement = dgel('cards-remaining');
-        const cardsCompletedElement = dgel('cards-completed');
-        const correctCountElement = dgel('correct-count');
-        const incorrectCountElement = dgel('incorrect-count');
-        const feedbackElement = dgel('feedback');
-        const finalScoreElement = dgel('final-score');
-        const restartBtn = dgel('restart-btn');
-        const uploadNewBtn = dgel('upload-new-btn');
-        const errorMessageElement = dgel('error-message');
-        const flipCard = dgel('flip-card');
-        const cardContainer = dgel('card-container');
-        const savedDecksContainer = dgel('saved-decks');
+        const fileInput = document.getElementById('file-input');
+        const appContent = document.getElementById('app-content');
+        const appTitle = document.getElementById('app-title');
+        const appSubtitle = document.getElementById('app-subtitle');
+        const questionText = document.getElementById('question-text');
+        const questionBack = document.getElementById('question-back');
+        const answerText = document.getElementById('answer-text');
+        const userAnswerInput = document.getElementById('user-answer-input');
+        const userAnswerContainer = document.getElementById('user-answer-container');
+        const userAnswerDisplay = document.getElementById('user-answer-display');
+        const optionsContainer = document.getElementById('options-container');
+        const selectedOptionsContainer = document.getElementById('selected-options-container');
+        const selectedOptionsDisplay = document.getElementById('selected-options-display');
+        const mcCorrectAnswerContainer = document.getElementById('mc-correct-answer-container');
+        const mcCorrectAnswerText = document.getElementById('mc-correct-answer-text');
+        const standardAnswerContainer = document.getElementById('standard-answer-container');
+        const showAnswerBtn = document.getElementById('show-answer');
+        const checkMcAnswerBtn = document.getElementById('check-mc-answer');
+        const markCorrectBtn = document.getElementById('mark-correct');
+        const markIncorrectBtn = document.getElementById('mark-incorrect');
+        const nextCardBtn = document.getElementById('next-card');
+        const progressBar = document.getElementById('progress-bar');
+        const cardsRemainingElement = document.getElementById('cards-remaining');
+        const cardsCompletedElement = document.getElementById('cards-completed');
+        const correctCountElement = document.getElementById('correct-count');
+        const incorrectCountElement = document.getElementById('incorrect-count');
+        const feedbackElement = document.getElementById('feedback');
+        const finalScoreElement = document.getElementById('final-score');
+        const restartBtn = document.getElementById('restart-btn');
+        const uploadNewBtn = document.getElementById('upload-new-btn');
+        const errorMessageElement = document.getElementById('error-message');
+        const flipCard = document.getElementById('flip-card');
+        const cardContainer = document.getElementById('card-container');
+        const savedDecksContainer = document.getElementById('saved-decks');
 
         // Event listeners
         fileInput.addEventListener('change', handleFileUpload);
