[Fix] upload file wording only in HTML file.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <h1 id="app-title">Lernkarten App</h1>
-            <p id="app-subtitle">Lade eine JSON-Datei hoch oder wähle ein gespeichertes Deck</p>
+            <p id="app-subtitle">Lade eine JSON-Datei oder ein ZIP Archiv von JSON-Dateien hoch - oder wähle ein gespeichertes Deck</p>
         </div>
 
         <div id="file-input-container">
@@ -20,7 +20,7 @@
                     <input type="file" id="file-input" accept=".json">
                 </div>
                 <div class="upload-option">
-                    <label for="zip-input" id="zip-upload-label">ZIP hochladen</label>
+                    <label for="zip-input" id="zip-upload-label">oder ZIP hochladen</label>
                     <input type="file" id="zip-input" accept=".zip">
                 </div>
             </div>
