--- a/p2quiz.html
+++ b/p2quiz.html
@@ -6,7 +6,7 @@
     <title>P2P Quiz Spiel</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <link rel="stylesheet" href="moquiz.css">
+    <link rel="stylesheet" href="p2quiz.css">
     <style>
         /* General body and font size for better readability and mobile friendliness */
         body {
